--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -1,21 +1,25 @@
 {{template "base" .}}
-<!doctype html>
-<html lang="en">
-    <head>
-        
-        <meta charset="utf-8">
-        {{define "title"}}Home{{end}}
-        <title>Home - Snippetbox</title>
-    </head>
-    <body>
 
-        
+{{define "title"}}Home{{end}}
 
-
-        {{define "body"}}
-            <h2>Latest Snippets</h2>
-            <p>There's nothing to see here, yet!</p>
-            {{end}}
-        </section>
-    </body>
-</html>
+{{define "body"}}
+    <h2>Latest Snippets</h2>
+    {{if .Snippets}}
+     <table>
+        <tr>
+            <th>Title</th>
+            <th>Created</th>
+            <th>ID</th>
+        </tr>
+        {{range .Snippets}}
+        <tr>
+            <td><a href='/snippet?id={{.ID}}'>{{.Title}}</a></td>
+            <td>{{.Created}}</td>
+            <td>#{{.ID}}</td>
+        </tr>
+        {{end}}
+    </table>
+    {{else}}
+        <p>There's nothing to see here... yet!</p>
+    {{end}}
+{{end}}
